--- a/package.json
+++ b/package.json
@@ -4,15 +4,12 @@
   "description": "Auto-enhanced code blocks with Highlight.js, clipboard copy and Toastr notifications",
   "main": "dist/hl-clip-toast.min.js",
   "scripts": {
-    "build": "npm-run-all --parallel css-example js-min js-example plugins",
+    "build": "rollup -c",
     "dev": "npm-run-all --parallel watch:* sync plugins",
     "sync": "browser-sync start --server --files *.html pages/ dist/",
-    "watch:scss": "sass --watch build/scss/example.scss:dist/example.min.css --style=compressed --load-path=node_modules",
-    "watch:js-min": "esbuild build/js/hl-clip-toast.js --bundle --minify --outdir=dist --watch",
-    "watch:js-example": "esbuild build/js/example.js --bundle --minify --outdir=dist --watch",
-    "css-example": "sass build/scss/example.scss dist/example.min.css --no-source-map --style=compressed --load-path=node_modules",
-    "js-min": "esbuild build/js/hl-clip-toast.js --bundle --minify --outdir=dist",
-    "js-example": "esbuild build/js/example.js --bundle --minify --outdir=dist",
+    "watch:js": "rollup -c --watch",
+    "watch:css": "sass --watch --silence-deprecation=color-functions,global-builtin,mixed-decls,import --no-source-map --style=compressed --load-path=node_modules build/scss/:dist/css/",
+    "css": "sass --silence-deprecation=color-functions,global-builtin,mixed-decls,import --no-source-map --style=compressed --load-path=node_modules build/scss/:dist/css/",
     "plugins": "node build/npm/Publish.js -v"
   },
   "keywords": [
@@ -36,10 +33,16 @@
     "url": "https://github.com/wikigods/highlightjs-clipboard-toastr/issues"
   },
   "devDependencies": {
+    "@babel/core": "^7.26.10",
+    "@babel/preset-env": "^7.26.9",
+    "@rollup/plugin-babel": "^6.0.4",
+    "@rollup/plugin-commonjs": "^28.0.3",
+    "@rollup/plugin-node-resolve": "^16.0.1",
     "browser-sync": "^3.0.4",
-    "esbuild": "^0.25.2",
     "fs-extra": "^11.3.0",
     "npm-run-all": "^4.1.5",
+    "rollup": "^2.79.2",
+    "rollup-plugin-terser": "^7.0.2",
     "sass": "^1.86.3"
   },
   "dependencies": {
